src/objects/copado__Git_Org_Commit__c.object
<CustomObject>
    <description>This object stores the individual commits to a Git repository executed by Copado Deployer.</description>
    <fields>
        <fullName>CommitWebURI__c</fullName>
        <formula>HYPERLINK(copado__Git_Backup__r.copado__Git_Repository__r.WebURI__c + &apos;/commit/&apos; +  copado__Commit_Id__c,copado__Commit_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CommitWebURI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Changes__c</fullName>
        <label>Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Commit_Date__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Commit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Commit_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Commit Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__Commit_Message__c</fullName>
        <label>Commit Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__Git_Backup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Git Snapshot</label>
        <referenceTo>copado__Git_Backup__c</referenceTo>
        <relationshipName>Git_Org_Commits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Org__c</fullName>
        <label>Org</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Snapshot Commits</relationshipLabel>
        <relationshipName>Git_Org_Commits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>No changes</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__View_in_Git__c</fullName>
        <formula>HYPERLINK(IF(AND(NOT(ISNULL( 
copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c)), copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c != &apos;&apos;), copado__Git_Backup__r.copado__Git_Repository__r.copado__Commit_Base_URL__c + copado__Commit_Id__c,&apos;&apos;), copado__Commit_Id__c)</formula>
        <label>View in Git</label>
        <type>Text</type>
    </fields>
    <label>Snapshot Commit</label>
    <nameField>
        <displayFormat>Cmt-{0000}</displayFormat>
        <label>Commit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snapshot Commits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>copado__Commit_Id_Status_Complete</fullName>
        <active>true</active>
        <errorConditionFormula>AND( !ISBLANK(copado__Commit_Id__c), not(ISPICKVAL(copado__Status__c,&quot;Complete&quot;)))</errorConditionFormula>
        <errorDisplayField>copado__Status__c</errorDisplayField>
        <errorMessage>The commit status must be &apos;Complete&apos; whenever there is a commit Id.</errorMessage>
    </validationRules>
</CustomObject>